Feature complete
All episodes and channels information correctly addressed.

Beginning of beta testing process